[Save] adds landing page as a ui router state

--- a/client/assets/css/landing.css
+++ b/client/assets/css/landing.css
@@ -47,4 +47,11 @@
   }
 }
 
+body, .mainphoto {
+  height: 100%;
+  background-image: url('../images/santamonica.jpg');
+  background-size: cover;
+}
+
+
 
