--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -25,11 +25,56 @@ small {
 }
 
 .main-container {
-  margin:0 20px;
+  margin-right:20px;
+  height:650px;
 }
 
-.main-container > div {
-  border-left:1px solid #a6a6a6;
+.main-container .map-container {
+  width:100%;
+  /* fixed width must be set for map-canvas */
+  height:650px;
+}
+
+.main-container #map-canvas {
+  height:100%;
+  width:100%;
+}
+
+.details-container .details-neighborhood-bg {
+  background-image: url('../images/default-neighborhood-bg.jpg');
+  background-size: cover;
+  width:100%;
+  height:150px;
+  opacity:0.5;
+}
+
+.details-container h1 {
+  font-size: 72px;
+  text-align: center;
+  padding-top:30px;
+  color:#fff;
+}
+
+.details-container h4 {
+  display: inline-block;
+}
+
+.details-container .icon {
+  display: inline-block;
+  margin-left:20px;
+  width:25px;
+  height:25px;
+}
+
+.details-container .attractions {
+  border-right:1px solid #000;
+  background-color: yellow;
+}
+
+.photo-gallery {
+  overflow: hidden;
+  width:100%;
+  max-height:300px;
 }
 
 .thumbnails-container {
@@ -44,8 +89,9 @@ small {
   margin-top:20px;
 }
 
-
 .footer {
+  position:fixed;
+  bottom:0;
   height:50px;
   background-color:#f8f8f8;
   border-color: #e7e7e7;
