--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -40,40 +40,67 @@ small {
   width:100%;
 }
 
+.details-container {
+  overflow:scroll;
+}
+
 .details-container .details-neighborhood-bg {
   background-image: url('../images/default-neighborhood-bg.jpg');
   background-size: cover;
   width:100%;
-  height:150px;
+  height:100px;
   opacity:0.5;
 }
 
 .details-container h1 {
   font-size: 72px;
   text-align: center;
-  padding-top:30px;
+  padding-top:10px;
   color:#fff;
 }
 
-.details-container h4 {
+.details-container h4,
+.details-container p,
+.details-container h5 {
   display: inline-block;
 }
 
+.details-container label {
+  margin-left:20px;
+}
+
+.details-container .attractions,
+.details-container .amenities {
+  height:200px;
+  overflow:scroll;
+  padding-left:0;
+}
+
+.details-container .attractions li,
+.details-container .amenities li {
+  display: block;
+  border-right:1px solid #000;
+  margin-left:30px;
+  text-align: left;
+  cursor: pointer;
+}
+
+
 .details-container .icon {
   display: inline-block;
-  margin-left:20px;
+  margin-right:0px;
   width:25px;
   height:25px;
 }
 
-.details-container .attractions {
-  border-right:1px solid #000;
-  background-color: yellow;
+.details-container .card-block {
+  margin-left:20px;
 }
 
 .photo-gallery {
   overflow: hidden;
   width:100%;
+  text-align: center;
   max-height:300px;
 }
 
