[Save] ng-style linking

--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -53,8 +53,9 @@ small {
 }
 
 .details-container .details-neighborhood-bg {
-  background-image: url('../images/default-neighborhood-bg.jpg');
-  background-size: cover;
+/*  background-image: url("../images/gas-icon.png");
+*//*  background-color: red;
+*/  background-size: cover;
   width:100%;
   height:100px;
   opacity:0.5;
