--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -4,8 +4,6 @@
   margin-bottom:0;
 }
 
-
-
 /* default styles */
 
  ul {
@@ -94,7 +92,6 @@ small {
   cursor: pointer;
 }
 
-
 .details-container .icon {
   display: inline-block;
   margin-right:0px;
@@ -106,11 +103,10 @@ small {
   margin-left:20px;
 }
 
-.photo-gallery {
-  overflow: hidden;
-  width:100%;
-  text-align: center;
-  max-height:300px;
+.slideshow {
+  overflow:hidden;
+  height:250px;
+
 }
 
 .thumbnails-container {
