--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -4,6 +4,9 @@
   margin-bottom:0;
 }
 
+/* prevents unintentional routing in Angular via href tags on empty anchors Bootstrap uses for styling */
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
 /* default styles */
 
  ul {
@@ -106,7 +109,6 @@ small {
 .slideshow {
   overflow:hidden;
   height:250px;
-
 }
 
 .thumbnails-container {
