[Layout] Styles form and header on landing page

--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -127,6 +127,7 @@ small {
   position:fixed;
   bottom:0;
   height:50px;
+  width: 100%;
   background-color:#f8f8f8;
   border-color: #e7e7e7;
 }
