--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -1,4 +1,3 @@
-@import "settings";
-@import "foundation";
-@import "foundation-icons.css";
-@import "search-page.scss";
+// @import "settings";
+// @import "foundation-icons.css";
+// @import "search-page.scss";
