--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -121,15 +121,12 @@ small {
   height:25px;
 }
 
-<<<<<<< HEAD
 .details-container .card-block img {
   display: inline-block;
   width:100px;
   height:100px;
 }
 
-=======
->>>>>>> [Merge] Fixes merge conflict in details template
 .details-container .commute .card-block {
   text-align: right;
 }
@@ -172,8 +169,6 @@ small {
   text-align: center;
   vertical-align: middle;
   font-size: 20px;
-<<<<<<< HEAD
-<<<<<<< HEAD
 }
 
 .nav-container a {
@@ -181,21 +176,11 @@ small {
 }
 
 .nav-container .nav-button {
-=======
-  color:#fff;
+  color:#5f327;
 }
 
-.nav-container > div > div > div {
->>>>>>> [Merge] Fixes merge conflict in details template
-=======
-}
-
-.nav-container a {
-  color:#fff;
-}
 
 .nav-container .nav-button {
->>>>>>> [Feat] Adds routing for detail-il-sections
   background-color: #5f327c;
   text-shadow: 0px -1px 0px rgba(30, 30, 30, 0.8);
     -webkit-box-shadow: 0px 4px 5px rgba(31, 31, 31, 0.50);
@@ -204,15 +189,8 @@ small {
   padding-top:5px;
   min-width:100px;
   width:80%;
-<<<<<<< HEAD
-<<<<<<< HEAD
   max-height:60px;
-=======
-  height:40px;
->>>>>>> [Merge] Fixes merge conflict in details template
-=======
   max-height:60px;
->>>>>>> [Feat] Adds routing for detail-il-sections
   margin:0 auto;
 }
 
