--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -143,11 +143,11 @@ small {
 
 .slideshow {
   overflow:hidden;
-  height:150px;
+  height:200px;
   position:relative;
 }
 
-.slideshow span {
+.slideshow .neighborhood-name {
   position:absolute;
   top:5px;
   max-width:50%;
@@ -162,6 +162,18 @@ small {
     -webkit-box-shadow: 0px 4px 5px rgba(31, 31, 31, 0.50);
     -moz-box-shadow:    0px 4px 5px rgba(31, 31, 31, 0.50);
     box-shadow:         0px 4px 5px rgba(31, 31, 31, 0.50);
+}
+
+.slideshow .picture-container {
+  position: relative;
+}
+
+.slideshow .instagram-username {
+  z-index:1;
+  position:absolute;
+  bottom:10px;
+  left:10px;
+  color:white;
 }
 
 .nav-container {
