[cleanup] styles orderby select element to match other form elements and disables form button when no input is entered

--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -235,6 +235,10 @@ small {
   margin-top:20px;
 }
 
+.filterForm .orderBy label {
+  margin-top:5px;
+}
+
 .footer {
   position:fixed;
   bottom:0;
