--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -44,11 +44,11 @@ small {
   color:#5f327c;
 }
 
-.header {
+.header img {
   position:absolute;
   top:0;
-  width:200px;
-  height:50px;
+  left:0;
+  z-index:99;
 }
 
 .main-container {
