[Fix] standardizes footerand footer colors

--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -4609,7 +4609,7 @@ td {
 
 /* Default Link Styles */
 a {
-  color: #00558b;
+  color: #5F327C;
   text-decoration: none;
   line-height: inherit; }
   a[ui-sref] {
