--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -32,7 +32,7 @@ p {
 }
 
 a, a:hover, a:focus {
-  color:#fff;
+  color: #5F327C;
   text-decoration: none;
 }
 
@@ -263,4 +263,5 @@ small {
   width: 100%;
   background-color:#f8f8f8;
   border-color: #e7e7e7;
+  color: #5F327C;
 }
