--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -259,9 +259,9 @@ small {
 .footer {
   position:fixed;
   bottom:0;
-  height: 25px;
+  height:auto;
   width: 100%;
+  padding-top: 20px;
   background-color:#f8f8f8;
   border-color: #e7e7e7;
-  color: #5F327C;
 }
