--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -3,7 +3,7 @@
   box-sizing:border-box;
   background: #DDDDDD;
   box-shadow: 1px 1px 2px #333;
-  border:5px solid #3476CA;
+  border:5px solid #5F327C;
   height: 20px;
   width: 20px;
   border-radius: 10px;
