[feat] Adds functionality for loading gif

--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -75,13 +75,14 @@ small {
 .results-container {
   padding:0 10px 10px 10px;
   margin-top:10px;
+  text-align:center;
 }
 
 .details-container .details-neighborhood-bg {
-  background: webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+  background:webkit-background-size: cover;
+        -moz-background-size:cover;
+        -o-background-size:cover;
+        background-size:cover;
   width:100%;
   height:100px;
 }
