--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -8,6 +8,12 @@
   margin-bottom:0;
 }
 
+.results-container .searchForm-submit:focus{
+   outline: none !important;
+}
+
+
+
 /* prevents unintentional routing in Angular via href tags on empty anchors Bootstrap uses for styling */
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
@@ -47,6 +53,9 @@ small {
 }
 
 .header img {
+  display: inline-block;
+  width: 200px;
+  height: 60px;
   position:absolute;
   top:0;
   left:0;
@@ -94,6 +103,14 @@ small {
   color: #5f327c;
   font-size: 20px;
   margin-bottom: 15px;
+}
+
+.loading-text {
+  position: absolute;
+  text-align: center;
+  margin: 0 auto;
+  top:60%;
+  right:28%;
 }
 
 .details-container .details-neighborhood-bg {
@@ -293,6 +310,12 @@ small {
   margin-top:20px;
 }
 
+.form-control,
+.searchForm .form-group input {
+  /*border-radius: 0;
+  -webkit-appearance: none;*/
+}
+
 .filterForm .orderBy {
   display: inline-block;
 }
@@ -302,6 +325,8 @@ small {
 }
 
 .filterForm .filter-options-btn {
+  border-radius: 0;
+  -webkit-appearance: none;
   margin-bottom:15px;
 }
 
@@ -318,6 +343,18 @@ small {
   background-color:#f8f8f8;
   border-color: #e7e7e7;
 }
+
+.searchForm-submit {
+  color: #FFF;
+  vertical-align: middle;
+  background-color: #5F327C;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-image: none;
+  border: none;
+}
+
 
 @media only screen and (min-width:380px) and (max-width: 992px)  {
 
@@ -347,4 +384,171 @@ small {
     padding-left:0;
   }
 }
+
+
+/*SPINNER*/
+
+.loading-image {
+  display: inline-block;
+  height:60px;
+  width:auto;
+  position: absolute;
+  top: 41%;
+  right:46%;
+}
+
+.spinner {
+  position: absolute;
+  top: 50%;
+  right:50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.spoke {
+  height: 30px;
+  width: 6px;
+  background: #FFF;
+  position: absolute;
+  -webkit-animation: something_maybe_cool_idk 2s infinite ease;
+          animation: something_maybe_cool_idk 2s infinite ease;
+}
+.spoke:nth-child(1) {
+  -webkit-transform: rotate(30deg);
+      -ms-transform: rotate(30deg);
+          transform: rotate(30deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 0.25s;
+          animation-delay: 0.25s;
+}
+.spoke:nth-child(2) {
+  -webkit-transform: rotate(60deg);
+      -ms-transform: rotate(60deg);
+          transform: rotate(60deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+.spoke:nth-child(3) {
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 0.75s;
+          animation-delay: 0.75s;
+}
+.spoke:nth-child(4) {
+  -webkit-transform: rotate(120deg);
+      -ms-transform: rotate(120deg);
+          transform: rotate(120deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+.spoke:nth-child(5) {
+  -webkit-transform: rotate(150deg);
+      -ms-transform: rotate(150deg);
+          transform: rotate(150deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+}
+.spoke:nth-child(6) {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+.spoke:nth-child(7) {
+  -webkit-transform: rotate(210deg);
+      -ms-transform: rotate(210deg);
+          transform: rotate(210deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 1.75s;
+          animation-delay: 1.75s;
+}
+.spoke:nth-child(8) {
+  -webkit-transform: rotate(240deg);
+      -ms-transform: rotate(240deg);
+          transform: rotate(240deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+.spoke:nth-child(9) {
+  -webkit-transform: rotate(270deg);
+      -ms-transform: rotate(270deg);
+          transform: rotate(270deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 2.25s;
+          animation-delay: 2.25s;
+}
+.spoke:nth-child(10) {
+  -webkit-transform: rotate(300deg);
+      -ms-transform: rotate(300deg);
+          transform: rotate(300deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+}
+.spoke:nth-child(11) {
+  -webkit-transform: rotate(330deg);
+      -ms-transform: rotate(330deg);
+          transform: rotate(330deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 2.75s;
+          animation-delay: 2.75s;
+}
+.spoke:nth-child(12) {
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+  -webkit-transform-origin: 50% -200%;
+      -ms-transform-origin: 50% -200%;
+          transform-origin: 50% -200%;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+@-webkit-keyframes something_maybe_cool_idk {
+  50% {
+    background: purple;
+    -webkit-transform-origin: 50% -170%;
+            transform-origin: 50% -170%;
+  }
+}
+
+@keyframes something_maybe_cool_idk {
+  50% {
+    background: purple;
+    -webkit-transform-origin: 50% -170%;
+            transform-origin: 50% -170%;
+  }
+}
+
 
