--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -447,10 +447,59 @@ small {
   min-height:570px;
   margin-top:20px;
   padding:20px;
+  margin-bottom: 8px;
 }
 
-.amenities-categories {
+.amenities-categories,
+.charts-container .factual-info  {
    border-right:2px solid #5F327C;
+}
+
+.charts-container ul {
+  margin:15px 10px 10px -50px;
+  padding-right:20px;
+}
+
+.charts-container li {
+  margin:15px auto;
+  padding-right:10px;
+  text-align: center;
+}
+
+.charts-container li h5 {
+  font-weight: bold;
+}
+
+.charts-container span {
+  font-size:20px;
+}
+
+#pie-chart {
+  margin-top:20px;
+  padding-top:20px;
+}
+
+.chart-splitter {
+  border: 1px solid #5F327C;
+}
+
+.bar-chart-container,
+.pie-chart-container {
+  text-align: center;
+}
+
+.bar-chart-container img,
+.pie-chart-container img{
+  display: inline-block;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 15px;
+  width: 250px;
+  height: auto;
+}
+
+.bar-chart-container {
+  margin-top: 30px;
 }
 
 .amenities-categories ul {
