--- a/client/assets/css/popper.css
+++ b/client/assets/css/popper.css
@@ -1,9 +1,9 @@
 
 .popper {
   box-sizing:border-box;
-  background: #DDDDDD;
+  background: #FFF;
   box-shadow: 1px 1px 2px #333;
-  border:5px solid #5F327C;
+  border:5px solid #306BA4;
   height: 20px;
   width: 20px;
   border-radius: 10px;
