--- a/client/assets/css/landing.css
+++ b/client/assets/css/landing.css
@@ -6,14 +6,13 @@
 }
 
 .landing-photo {
-  background-image: url('../images/Landing/jumbotron-header.jpg');
-  height: 100%;
-  background-size: cover;
-  text-align: center;
-  padding-top: 300px;
-  padding-bottom: 200px;
-  max-height: 700px;
   position:relative;
+  height: 100%;
+  max-height: 700px;
+  background-image: url('../images/Landing/jumbotron-header.jpg');
+  background-size: cover;
+  padding-bottom: 200px;
+  text-align: center;
 }
 
 .logo-header {
@@ -29,16 +28,9 @@
   text-shadow: 0 2px 6px rgba(0,0,0,1);
 }
 
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-}
-
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
+.cover-container {
+  padding-top: 150px;
+  padding-bottom: 75px;
 }
 
 .cover-container {
@@ -52,7 +44,10 @@
 
 .landing-container #place-search {
   height:16px;
-  font-size: 14xpx;
+  font-size: 14px;
+  border-radius: 5px;
+  width:100%;
+  padding-right: 0;
 }
 
 .landing-container .searchForm {
@@ -78,7 +73,6 @@
   padding-top: 10px;
 }
 
-.landing-container #place-search,
 .landing-container .form-group select {
   border-radius:0;
 }
@@ -103,6 +97,10 @@
   height:100%;
 }
 
+.featurette2 .text-container {
+  float:right;
+}
+
 .featurette-small {
   display: block;
   width:55%;
@@ -120,7 +118,63 @@
   letter-spacing: -1px;
 }
 
+.search-neighborhood-btn-container {
+  margin-top: 50px;
+  text-align: center;
+}
+
+
 /* to handle different devices */
+
+
+@media (min-width: 374px) and (max-width: 975px) {
+  .how-it-works {
+    display: none;
+  }
+
+  .featurette3 {
+    margin-bottom:150px;
+  }
+  .search-city-img {
+    display: none;
+  }
+}
+
+@media (min-width: 373px) and (max-width: 480px) {
+  .cover-container {
+    padding-top: 50px;
+  }
+
+  .feature-section h1 {
+    font-size: 35px;
+  }
+
+  .featurette {
+    height: 50px;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  .featurette2 {
+    background-image:none;
+  }
+
+  .featurette3 {
+    margin-bottom: 0;
+  }
+
+  .featurette img {
+    display: none;
+  }
+  .featurette .text-container p {
+    display: none;
+  }
+
+  .header {
+    display: none;
+  }
+}
+
 @media (min-width: 768px) {
   /* Start the vertical centering */
   .site-wrapper-inner {
