--- a/client/assets/css/charts.css
+++ b/client/assets/css/charts.css
@@ -21,7 +21,7 @@
 
 #pie-chart {
   margin-top:20px;
-  padding-top:20px;
+  /*padding-top:20px;*/
 }
 
 .chart-splitter {
@@ -48,7 +48,7 @@
 }
 
 .bar-chart-container {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 #pie-chart,
